fixing up some of the formatting.  Outline only works on firefox.

--- a/media/css/site.css
+++ b/media/css/site.css
@@ -8,6 +8,9 @@
     padding:1em;
 }
 
+.about p {
+    text-align: justify;
+}
 
 #content fieldset, #content p {
     margin-bottom: 0px;
@@ -25,7 +28,7 @@ body
 {
     background-color: black;
     color: white;
-    outline: 1px solid white;
+    border: 1px solid white;
     text-align:center;
     margin-bottom:1em;
 }
